# tv_extrapolation_wrapper

./: .gitignore  README.md  environment.yml  pyproject.toml
configs/it_tv_firstprocessing/: 1h.yaml  30min.yaml
configs/it_tv_initial_esrf/: 5ms_0-37p5ms.yaml  5ms_0-75ms.yaml  5ms_37p5-75ms.yaml  75ms_0-37p5ms.yaml  75ms_0-75ms.yaml  75ms_37p5-75ms.yaml
configs/it_tv_initial_ocp/: ocp_filtered.yaml  ocp_firstprocessing_1h.yaml  ocp_non_filtered.yaml  ocp_oldflip_maxiv.yaml
configs/it_tv_initial_ocp_can/: can_laser26.yaml
configs/it_tv_ocp/: 1h.yaml  30min.yaml  ocp_filtered.yaml
configs/legacy/: README.md
configs/xtr_it_tv_xfel/: 5us.yaml  esrf_75ms.yaml  low_ph.yaml  manifest.csv  trapping_1.yaml  trapping_2.yaml
configs/xtr_it_tv_xfel_30ms_relaxed/: 30ms_relaxed_threshold.yaml
configs/xtr_it_tv_xfel_30ms_variants/: 30ms_no_solvent_exclusion.yaml
datasets/: 10ms.yaml  10ns.yaml  30ms.yaml  5us.yaml  esrf_0-9ms.yaml  esrf_5ms.yaml  esrf_5ms_0-37p5ms.yaml  esrf_5ms_0-75ms.yaml  esrf_5ms_2.yaml  esrf_5ms_37p5-75ms.yaml  esrf_75ms.yaml  esrf_75ms_0-37p5ms.yaml  esrf_75ms_0-75ms.yaml  esrf_75ms_37p5-75ms.yaml  esrf_9-39ms.yaml  low_ph.yaml  ocp_ech_405_cryo.yaml  trapping_1.yaml  trapping_2.yaml
docs/: inventory.md  it_tv_extrapolated_maps.md  tv_it_xfel_results.md  xtrapol8_refined_results.md
examples/configs/: low_ph.yaml  trapping_1.yaml  trapping_2.yaml
examples/results/: summary.csv
scripts/: diagnose_30ms_it_tv_estimation.py  export_refined_2fofc_maps.py  generate_it_tv_extrapolated_maps.py  generate_xfel_it_tv_configs.py  inspect_initial_data.py  make_phenix_ready_extrapolated_mtz.py  mtz_metadata.py  phenix_xtrapol8_label_patch.py  prepare_esrf_it_tv_inputs.py  prepare_firstprocessing_it_tv_inputs.py  prepare_initial_esrf_it_tv_inputs.py  prepare_initial_ocp_can_it_tv_inputs.py  prepare_initial_ocp_it_tv_inputs.py  rebuild_5us_test_from_reference_diffmap.py  run_it_tv_conditions.py  run_xtrapol8_real_batch.py  sanity_check_5us_maps.py
tests/: baseline_5us_10ns.json  test_cli.py  test_config.py  test_mtz_inspect.py  test_occupancy_scan.py  test_pdb_mix.py  test_pipeline_10ns.py  test_pipeline_5us.py
(+234 files in other folders)
