[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tv_extrapolation"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pyyaml",
    "pydantic>=2",
    "numpy",
    "gemmi",
    "reciprocalspaceship",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
tv-extrapolate = "tv_extrapolation.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
