[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tv_extrapolation"
version = "0.1.0"
requires-python = ">=3.12"
# xtr_estimator is required at runtime but is installed from git with
# --no-deps via environment.yml/README (it is not on PyPI and its pinned
# transitive deps conflict with this env), so it cannot be an ordinary
# dependency here.  meteor (PyPI distribution name: meteor-maps) IS on PyPI
# and is listed below, so a plain `pip install -e .` pulls it too.
dependencies = [
    "pyyaml",
    "pydantic>=2",
    "numpy",
    "gemmi",
    "reciprocalspaceship",
    "meteor-maps>=0.4.2",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
tv-extrapolate = "tv_extrapolation.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
